--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <img src="images/'murica.jpeg" alt="Image of American flag" />
+    <img src="images/'murica.JPEG" alt="Image of American flag" />
     <p class="why">God Bless 'Murica</p>
     <p>Oh say can you see, by the dawn's early light.</p>
   </body>
